[gd_scene load_steps=10 format=3 uid="uid://bjd5cdlgxjv0l"]

[ext_resource type="Script" path="res://Scripts/Principal/06 - Tela de Redefinir Dados.gd" id="1_kvubj"]
[ext_resource type="Texture2D" uid="uid://cgavlolq1yri2" path="res://Recursos/Imagens/Fundos/fundoBranco.png" id="2_kh60v"]
[ext_resource type="FontFile" uid="uid://b3qs137o2m78r" path="res://Recursos/Fontes/Poppins/Poppins-Bold.ttf" id="3_arwcy"]
[ext_resource type="PackedScene" uid="uid://bgu2mg7cnmjdo" path="res://Recursos/Componentes/BotaoFundoAzul.tscn" id="4_omvij"]
[ext_resource type="PackedScene" uid="uid://dbidxil2e8lk1" path="res://Recursos/Componentes/Box Email.tscn" id="5_hjn55"]
[ext_resource type="PackedScene" uid="uid://nep5yir0nrba" path="res://Recursos/Componentes/Box Nome.tscn" id="6_hevip"]
[ext_resource type="PackedScene" uid="uid://ch17ebldpvs55" path="res://Recursos/Componentes/Box Senha.tscn" id="7_1bnql"]
[ext_resource type="PackedScene" uid="uid://wx5whhqgusvp" path="res://Recursos/Componentes/Box Calendario.tscn" id="8_g6lty"]
[ext_resource type="Texture2D" uid="uid://c0fsxjr0c661s" path="res://Recursos/Imagens/Icones/Create.png" id="9_qnxrd"]

[node name="06TeladeRedefinirDados" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvubj")
metadata/_edit_lock_ = true

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_kh60v")
centered = false
metadata/_edit_lock_ = true

[node name="Botoes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Voltar" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 43.0
offset_top = 128.0
offset_right = 83.0
offset_bottom = 207.0
scale = Vector2(2.23347, 1.66458)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_arwcy")
theme_override_font_sizes/font_size = 50
text = "<"
flat = true

[node name="BotaoFundoAzul" parent="." instance=ExtResource("4_omvij")]
layout_mode = 0
offset_left = 232.0
offset_top = 1624.0
offset_right = 498.0
offset_bottom = 1689.0
scale = Vector2(2.33278, 2.55703)
TextoBotao = "Salvar"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 136.0
offset_right = 1060.0
offset_bottom = 260.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Alterar Dados Salvos"

[node name="Box" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoxEmail" parent="Box" instance=ExtResource("5_hjn55")]
layout_mode = 0
offset_left = 312.0
offset_top = 640.0
offset_right = 616.0
offset_bottom = 704.0
placeholder_text = "Email"

[node name="Box Nome" parent="." instance=ExtResource("6_hevip")]
layout_mode = 0
offset_left = 313.0
offset_top = 464.0
offset_right = 617.0
offset_bottom = 528.0
placeholder_text = "Nome"

[node name="BoxSenha" parent="." instance=ExtResource("7_1bnql")]
layout_mode = 0
offset_left = 316.0
offset_top = 1000.0
offset_right = 556.0
offset_bottom = 1064.0
placeholder_text = "***********"

[node name="BoxCalendario" parent="." instance=ExtResource("8_g6lty")]
offset_left = 156.0
offset_top = 824.0
offset_right = 156.0
offset_bottom = 824.0

[node name="Create" type="Sprite2D" parent="."]
position = Vector2(852, 696)
scale = Vector2(3.81, 2.83667)
texture = ExtResource("9_qnxrd")

[node name="Create2" type="Sprite2D" parent="."]
position = Vector2(852, 512)
scale = Vector2(3.66666, 2.87754)
texture = ExtResource("9_qnxrd")

[node name="Create3" type="Sprite2D" parent="."]
position = Vector2(848.94, 887.92)
scale = Vector2(3.745, 2.67334)
texture = ExtResource("9_qnxrd")

[connection signal="pressed" from="Botoes/Voltar" to="." method="_on_voltar_pressed"]
